# fantasai-sports

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  Procfile  WORKPLAN.md  entrypoint.sh  fantasy-sports-helperPRD.md  nixpacks.toml  pyproject.toml  railway.toml  spike_pybaseball.py
.claude/: launch.json
alembic/: env.py
alembic/versions/: 1dfbb6e08060_add_il_and_injury_fields_to_teams.py  234fc4c032f8_add_data_source_to_player_stats.py  5ab30e933271_add_ranking_snapshots_table.py  5ebf874800fb_add_transactions_table.py  721421699845_add_data_source_to_player_stats_unique_.py  83900d6ce121_add_blurb_batches_table.py  a0b45d6b9db7_add_player_rolling_stats.py  a3f7b2c1d4e5_add_matchup_analyses_and_txn_backfill.py  acbc21dafa6f_add_team_name_and_roster_names_to_teams.py  b1c2d3e4f5a6_add_player_birth_year.py  b2c3d4e5f6a7_purge_non_move_transactions.py  (+15 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  (+1 more)
scripts/: backfill_birth_years.py  monday_blurbs.py  refresh_blurbs.py  refresh_data.py  refresh_player_blurbs.py  verify_rolling_windows.py
tests/: conftest.py  test_adapter_validation.py  test_comparator.py  test_errors.py  test_health.py  test_integration.py  test_integration_rolling_windows.py  test_league_analyzer.py  test_leagues.py  test_mlb_adapter.py  test_pipeline.py  test_players_api.py  test_rankings_api.py  test_recommender.py  test_roster_analysis.py  test_scoring.py  test_strategy.py  test_team_evaluator.py  test_trade_evaluator.py
(+114 files in other folders)
